@@ -1238,6 +1238,8 @@ typedef struct
 #define VID_QUERY                   ((UINT32)617)
 #define VID_CONFIG_HINT_COUNT       ((UINT32)618)
 #define VID_DESTINATION_ADDRESS     ((UINT32)619)
+#define VID_HYPERVISOR_TYPE         ((UINT32)620)
+#define VID_HYPERVISOR_INFO         ((UINT32)621)
 
 // Base variabe for single threshold in message
 #define VID_THRESHOLD_BASE          ((UINT32)0x00800000)
