@@ -24,6 +24,17 @@
 #include <nxevent.h>
 
 /**
+ * Upgrade from 22.29 to 22.30
+ */
+static bool H_UpgradeFromV29()
+{
+   CHK_EXEC(SQLQuery(_T("ALTER TABLE nodes ADD hypervisor_type varchar(31)")));
+   CHK_EXEC(SQLQuery(_T("ALTER TABLE nodes ADD hypervisor_info varchar(255)")));
+   CHK_EXEC(SetMinorSchemaVersion(30));
+   return true;
+}
+
+/**
  * Upgrade from 22.28 to 22.29
  */
 static bool H_UpgradeFromV28()
@@ -609,6 +620,7 @@ static struct
    bool (* upgradeProc)();
 } s_dbUpgradeMap[] =
 {
+   { 29, 22, 30, H_UpgradeFromV29 },
    { 28, 22, 29, H_UpgradeFromV28 },
    { 27, 22, 28, H_UpgradeFromV27 },
    { 26, 22, 27, H_UpgradeFromV26 },
